// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input disabled 1`] = `
<input
  class="block rounded-lg border border-indigoGray-20 px-4 py-3 font-sans text-sm font-normal text-indigoGray-90 outline-none placeholder:text-indigoGray-50 hover:border-indigoGray-30 focus:border-indigo-600 cursor-not-allowed border-indigoGray-40 bg-indigoGray-10 false undefined"
  disabled=""
  id="input-1"
  placeholder="Placeholder"
  type="text"
  value=""
/>
`;

exports[`Input error 1`] = `
<input
  class="block rounded-lg border border-indigoGray-20 px-4 py-3 font-sans text-sm font-normal text-indigoGray-90 outline-none placeholder:text-indigoGray-50 hover:border-indigoGray-30 focus:border-indigo-600 false border-red-500 text-red-500 undefined"
  id="input-1"
  placeholder="Placeholder"
  type="text"
  value=""
/>
`;

exports[`Input input with label and placeholder 1`] = `
<input
  class="block rounded-lg border border-indigoGray-20 px-4 py-3 font-sans text-sm font-normal text-indigoGray-90 outline-none placeholder:text-indigoGray-50 hover:border-indigoGray-30 focus:border-indigo-600 false false undefined"
  id="input-1"
  placeholder="Placeholder"
  type="text"
  value=""
/>
`;
